Fix poem shift from implementing letterEffect.js

--- a/style.css
+++ b/style.css
@@ -136,6 +136,8 @@ footer {
     text-align: center;
     line-height: 1.5;
     color: #fff; /* Assuming a dark background */
+    position: relative;
+    z-index: 2;
 }
 
 .flash {
@@ -145,6 +147,9 @@ footer {
 
 .poem-container {
     position: relative;
+    width: 100%;
+    overflow: hidden; /*prevents the page from extending
+    which is a problem with letterEffect.js script being added*/
 }
 
 #flashing-words-container .flash-word {
@@ -157,6 +162,7 @@ footer {
     width: 100%;
     height: 100%;
     z-index: 2;
+    pointer-events: none; /*makes sure clicks go through the layer*/
 }
 
 @keyframes flash {
